# 3DSController

./: .gitignore
3DS/: CMakeLists.txt  Makefile  helpers.cmake  qrgen.sh
3DS/include/: drawing.h  keyboard.h  settings.h  types.h  wireless.h
3DS/source/: input.c  keyboard.c  main.c  settings.c  wireless.c
3DS/src/: application.cpp  application.hpp  global.hpp  main.cpp  network.cpp  network.hpp  normalize.cpp  normalize.hpp
Linux/: 3DSController.py  3DSController.service  3DSController_gamepad.py  CMakeLists.txt  README.md
Linux/src/: application.cpp  application.hpp  controller.cpp  controller.hpp  controller_touch.cpp  global.hpp  log.cpp  log.hpp  main.cpp  network.cpp  network.hpp  normalize.cpp  normalize.hpp
PC/: CMakeLists.txt
PC/include/: keys.h  types.h  wireless.h
PC/source/: joystick.c  keyboard.c  keys.c  main.c  wireless.c
